# toychain

./: .gitignore  .travis.yml  404.html  Dockerfile  LICENSE  Makefile  README.md  blockchain.py  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
docs/: Getting_Started.md  Walkthrough.md
docs/Functionality/: Blockchain.md  Node.md
docs/Functionality/Blockchain/: index.html
docs/Functionality/Node/: index.html
docs/Getting_Started/: index.html
docs/Walkthrough/: index.html
reference/toychain/: index.html
reference/toychain/blockchain/: index.html
reference/toychain/node/: index.html
search/: search_index.json
tests/: test_blockchain.py  test_node.py
toychain/: __main__.py  app.py  blockchain.py  node.py
