[tool.poetry]
name = "toychain"
version = "0.2.0"
description = "A blockchain toy project, in Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/fsoubelet/toychain"


[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.4.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-sugar = "^0.9.3"

[tool.poetry.scripts]
node = "toychain.__main__:run_node"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
