[tool.poetry]
name = "toychain"
version = "0.3.0-alpha.0"
description = "A blockchain toy project, in Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fsoubelet/toychain"

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.4.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.3"
black = { version = "^19.10b0", python = "^3.6" }
pylint = "^2.4.4"
portray = "^1.4"
coverage = {extras = ["toml"], version = "^5.2.1"}
mypy = "^0.782"

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-report term-missing --cov-config=pyproject.toml --cov=toychain"
testpaths = ["tests"]

[tool.coverage.run]
source = ["toychain/"]

[tool.coverage.report]
omit = ["toychain/__main__.py"]

[tool.isort]
line_length = 100
force_single_line = false
atomic = true
include_trailing_comma = true
lines_between_types = 1
use_parentheses = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "toychain"
known_third_party = "pytest"

[tool.poetry.scripts]
node = "toychain.__main__:run_node"
docs = "portray.cli:__hug__.cli"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.portray]
extra_markdown_extensions = ["admonition", "codehilite", "footnotes", "pymdownx.arithmatex", "pymdownx.betterem", "pymdownx.caret", "pymdownx.critic", "pymdownx.details", "pymdownx.inlinehilite", "pymdownx.magiclink", "pymdownx.tabbed", "pymdownx.tasklist", "pymdownx.keys", "pymdownx.mark", "pymdownx.smartsymbols", "pymdownx.superfences", "pymdownx.tasklist", "pymdownx.tilde"]
modules = ["toychain"]

[tool.portray.mkdocs]
repo_url = "https://github.com/fsoubelet/toychain"
repo_name = "toychain"

[tool.portray.mkdocs.theme]
name = "material"
palette = {scheme = "light", primary = "teal", accent = "amber"}
font = {text = "Ubuntu Mono", code = "Fira Code"}

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
"Getting Started" = "docs/Getting_Started.md"

[[tool.portray.mkdocs.nav]]

[[tool.portray.mkdocs.nav.Functionality]]
Blockchain = "docs/Functionality/Blockchain.md"

[[tool.portray.mkdocs.nav.Functionality]]
Node = "docs/Functionality/Node.md"

[[tool.portray.mkdocs.nav]]
"Example Walkthrough" = "docs/Walkthrough.md"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"